# DRIAD_public

./: .gitignore  CITATION.cff  CUDAvar.h  Doxyfile  FunctionGenerators.cpp  FunctionGenerators.h  FunctionTable.cpp  FunctionTable.h  IFile.h  IonWake.vcxproj  IonWake_000.cu  IonWake_000.h  IonWake_100_integrate.cu  IonWake_100_integrate.h  IonWake_101_bounds.cu  IonWake_101_bounds.h  IonWake_102_ionAcc.cu  IonWake_102_ionAcc.h  IonWake_102_ionIonAcc.cu  IonWake_102_ionIonAcc.h  IonWake_103_dustAcc.cu  IonWake_103_dustAcc.h  IonWake_103_getUsserParams.h  IonWake_105_2DAnalysis.cpp  IonWake_105_2DAnalysis.h  IonWake_105_ionColl.cu  IonWake_105_ionColl.h  IonWake_106_Utilities.cpp  IonWake_106_Utilities.h  IonWake_107_PlotBMP.cpp  IonWake_107_PlotBMP.h  IonWake_108_ionDustAcc.cu  IonWake_108_ionDustAcc.h  IonWake_109_extrnElcField.cu  IonWake_109_extrnElcField.h  IonWake_EXE  LICENSE  Makefile  OFile.h  OFiles.h  (+22 more)
DRIAD_run_scripts/: deleteLocal.sh  disp.sh  follow.sh  getPaths.sh  qsub_run_script.sh  runLocal.sh  setup_run.sh
DRIAD_run_scripts/analysis/: .gitignore  Animate_Ion_Density.m  Get_Dust_Trace.m  plot_dust_motion2.m
DRIAD_run_scripts/base_input/: _dust_params.txt  _params.txt
IonWake/: Makefile  README
IonWake/examples/: params.txt
IonWake/source/: CMakeLists.txt  IonWake_000.cu  IonWake_000.h  IonWake_100_integrate.cu  IonWake_100_integrate.h  IonWake_101_bounds.h  IonWake_102_ionAcc.h  IonWake_103_dustAcc.h  IonWake_104_roadBlock.h  IonWake_105_ionColl.cu  IonWake_105_ionColl.h
analysis/: Add_Dust_To_2D_Plot.m  Add_Ion_Den_To_2D_Plot.m  Animate_Ion_Potential.m  Binary_Float_Search.m  Get_Ion_Density.m  Get_Ion_Grid.m  Get_Ion_Potential.m  Get_Params.m  LinearTimeSeries.m  Load_Plot_Styles.m  Scaler2DGrid.m  Test_Driver.m  animate_dens_potential.m  read_in_data.m  read_in_parameters.m
base_input/: _dust_params.txt  _params.txt  _plasma_params.txt  _timestep.txt  dust-params.txt  params.txt  plasma_params.txt  timestep.txt
examples/: params.txt  timestep.txt
source/: CMakeLists.txt  CUDAerr.h  CUDAvar.h  ErrorBase.h  IonWake_000.cu  IonWake_000.h  IonWake_100_integrate.cu  IonWake_100_integrate.h  IonWake_101_bounds.cu  IonWake_101_bounds.h  IonWake_102_ionAcc.cu  IonWake_102_ionAcc.h  IonWake_103_dustAcc.cu  IonWake_103_dustAcc.h  IonWake_104_roadBlock.cu  IonWake_104_roadBlock.h  IonWake_105_ionColl.cu  IonWake_105_ionColl.h  IonWake_106_Utilities.cpp  IonWake_106_Utilities.cu  IonWake_106_Utilities.h  IonWake_106_Utilities.hpp  constCUDAvar.h  e_field_in_cylinder.m
test/: IonWake_EXE  que-ion-wake  test
test/Data/: iw-q1_debug.txt  iw-q1_dust-charge.txt  iw-q1_dust-pos.txt  iw-q1_ion-den.txt  iw-q1_ion-pos.txt  iw-q1_params.txt  iw-q1_status.txt  iw-q1_trace.txt
test/Input/: dust-params.txt  e_field_in_cylinder.m
